<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/fruit_background"
    tools:context=".view.DetectionFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detection_title"
        android:textSize="22sp"
        android:textColor="@color/fruit_green"
        android:gravity="center"
        android:layout_marginBottom="16dp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:background="#F0F0F0">


        <ImageView
            android:id="@+id/detectionImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/scanned_image_description" />


        <fr.mastersd.sime.cheikhahmadoudiop.fruitdetector.view.BoxOverlayView
            android:id="@+id/boxOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>


    <TextView
        android:id="@+id/detectionResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/fruit_text_primary"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        tools:text="2 objets détectés" />


    <Button
        android:id="@+id/detectionGalleryButton"
        style="@style/FruitButton.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery_button_text"
        android:layout_marginBottom="12dp" />


    <Button
        android:id="@+id/detectionCameraButton"
        style="@style/FruitButton.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detection_camera_button"
        android:layout_marginBottom="12dp" />


    <Button
        android:id="@+id/detectionBackButton"
        style="@style/FruitButton.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home_button" />

</LinearLayout>
